2008-02-17  Karl Berry  <karl@gnu.org>

	* util/texi2dvi (EGREP): need egrep early.

	* util/texi2dvi: path_sep is : on djgpp too.  From Eli Z.

	* makeinfo/makeinfo.c: typos in comments.
	
	* makeinfo/cmds.c (cm_direntry): call close_single_paragraph,
	instead of add_char('\n'), or the INFO-DIR-SECTION lines from two
	consecutive @dircategory's are munged together.
	Bug report from Ralf Angeli, 16 Feb 2008 18:59:42.

2008-02-16  Karl Berry  <karl@gnu.org>

	* util/texi2dvi: path_sep is : on mingw as well as cygwin.
	Report from: FX Coudert, 16 Feb 2008 15:43:15.

	* makeinfo/cmds.c (cm_cite): avoid double apostrophe in
	Info output of, e.g., ... @cite{Foo}'s ...
	Report from Bob Chassell.

2008-02-15  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\tex): spurious space in redefinition of \top.

	* makeinfo/cmds.c (handle_include): set in_fixed_width_font
	for expanding the filename argument, so -- doesn't become -.
	Bug report from Daniel Richard G., 13 Feb 2008 01:50:00.

2008-02-11  Karl Berry  <karl@gnu.org>

	* info/session.c (incremental_search): if a regex search,
	search every time through the loop, not only if the search
	succeeded.
	Bug report from Ralf Wildenhues, 8 Feb 2008 23:30:51.

2008-02-10  Karl Berry  <karl@gnu.org>

	* info/session.c (show_isearch_prompt): Start with "Regexp" if
	it's a regexp i-search.
	Suggestion from Ralf Wildenhues, 8 Feb 2008 23:30:51.

2008-02-04  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\includezzz): simply do the \input (instead of
	trickily expanding it after the }) a la \verbatiminput; otherwise,
	@value expansions are not done.  The trickery just seems unnecessary.
	Report from Joseph S. Myers, 1 Feb 2008 01:11:11.

2008-02-01  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\ptextop): save plain tex \top (a math symbol).
	(tex env): restore plain text \top.

2008-01-31  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Click Sequences): new section to document new