@@ -1,4 +1,4 @@
-$Id: TODO,v 1.41 2008/02/10 00:05:26 karl Exp $
+$Id: TODO,v 1.42 2008/02/19 14:58:29 karl Exp $
 This is the todo list for GNU Texinfo.
 If you are interested in working on any of these, email bug-texinfo@gnu.org.
 
@@ -134,6 +134,10 @@ If you are interested in working on any of these, email bug-texinfo@gnu.org.
   - Support multibyte character sets, principally UTF-8; most
     critically, do not break multibyte characters across lines.
     http://lists.gnu.org/archive/html/bug-texinfo/2006-08/msg00001.html
+  - The help message does not report Down/Up for next/prev-line.
+  - It would be nice for h in the help window to quit help.
+  - It would be nice to be able to specify a preferred key to report in
+    the help message, instead of using the last one set; cf. q vs. C-x C-c.
   - Full-text search across all info files installed on the system.
   - Perhaps comply with LANGUAGE setting on a per-node basis, to allow
     incremental translation of Texinfo files.
